@@ -1,4 +1,4 @@
-:mod:`morepath.directive` Directive implementations
+``morepath.directive`` -- Directive implementations
 ===================================================
 
 .. automodule:: morepath.directive
